prusti-tests/tests/parse/ui/closures_fail-2.stderr
error: closure must specify return type
  --> $DIR/closures_fail-2.rs:12:13
   |
12 |       let f = closure!(
   |  _____________^
13 | |         requires(i >= 0),
14 | |         ensures(result == i + 1),
15 | |         |i: i32| i + 1
16 | |     );
   | |_____^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

